2014-12-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Added KPSE_COMPILER_VISIBILITY.
	* Makefile.am [AM_CFLAGS]: Added $(VISIBILITY_CFLAGS).

2014-09-19  Taco Hoekwater  <taco@elvenkind.com>

	* Makefile.am [Darwin]: Need to compile src/abort_prec_max.c.

2014-05-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Converted wrapper => proxy build system.

	* Makefile.am (unused_sources): Compile only as needed by mpost.

2014-05-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Integrated into TeX Live with wrapper build system.

2014-03-31  Taco Hoekwater  <taco@metatex.org>

	Imported mpfr-3.1.2.